// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Common/<CertificationItem /> should render component with required props when discovered 1`] = `
<div
  className="certification-container"
>
  <a
    className="image-wrapper"
    href="url"
    rel="noopener noreferrer"
    target="_blank"
  >
    <img
      alt="certificate"
      className="image"
      src="image"
    />
  </a>
  <div
    className="title"
  >
    title
  </div>
</div>
`;

exports[`components/Common/<CertificationItem /> should render component with required props when not discovered 1`] = `
<div
  className="certification-container"
>
  <div
    className="image-wrapper"
  >
    <img
      alt="certificate"
      className="image"
      src="test-file-stub"
    />
  </div>
  <div
    className="title"
  >
    ?????
  </div>
</div>
`;
